# Fullstack

./: Cargo.toml  compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_user_table.sql
backend/src/: main.rs
common/src/: lib.rs
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
frontend/src/: main.rs
